--- a/Re-start python/restart.ipynb
+++ b/Re-start python/restart.ipynb
@@ -74,6 +74,172 @@
     "\n",
     "print(MS)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prhshnth\n",
+      "prasanth is the name of owner name\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'prasanth'\n",
+    "print(s.replace('a','h'))\n",
+    "print(f'{s} is the name of owner name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, [1, 2, 3], 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [1,2,3,4,5,[1,2,3]]\n",
+    "s.append(s[5][0])\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 100, 120: 'ram'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "name[120]='ram'\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n lp\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = 2463\n",
+    "if (year%100 == 0):\n",
+    "    if (year%400 == 0):\n",
+    "        print('lp')\n",
+    "    else:\n",
+    "        print(\"n lp\")\n",
+    "else:\n",
+    "    if(year%4== 0):\n",
+    "        print('lp')\n",
+    "    else:\n",
+    "        print('n lp')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "nam\n",
+    "for name in range(1,10,-1):\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    if i == 4:\n",
+    "        pass\n",
+    "\n",
+    "print(i)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heklo\n",
+      "<function a at 0x0000014F8E18D580>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def a(num):\n",
+    "    print('heklo')\n",
+    "    return (a)\n",
+    "a(num)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m1 of class b\n"
+     ]
+    }
+   ],
+   "source": [
+    "class a():\n",
+    "    def method1(self):\n",
+    "        print('m1 of class is a')\n",
+    "class b(a):\n",
+    "    def method1(self):\n",
+    "        a.method1(self)\n",
+    "        print('m1 of class b')\n",
+    "ob = b()\n",
+    "ob.method1()"
+   ]
   }
  ],
  "metadata": {
