--- a/Re-start python/restart.ipynb
+++ b/Re-start python/restart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -239,6 +239,242 @@
     "        print('m1 of class b')\n",
     "ob = b()\n",
     "ob.method1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bE cONsIStENTt\n",
+      "bE cONsIStENTtn\n",
+      "bE cONsIStENTtne\n",
+      "bE cONsIStENTtneT\n",
+      "bE cONsIStENTtneTs\n",
+      "bE cONsIStENTtneTsi\n",
+      "bE cONsIStENTtneTsiS\n",
+      "bE cONsIStENTtneTsiSn\n",
+      "bE cONsIStENTtneTsiSno\n",
+      "bE cONsIStENTtneTsiSnoC\n",
+      "bE cONsIStENTtneTsiSnoC \n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Be ConSisTent\"\n",
+    "res = ''\n",
+    "for i in s:\n",
+    "    if ('A' <= i <= 'Z'):\n",
+    "        res += chr(ord(i) + 32)\n",
+    "    elif ('a' <= i <= 'z'):\n",
+    "        res += chr(ord(i) - 32)\n",
+    "    else:\n",
+    "        res += i\n",
+    "for i in range(-1,-12,-1):\n",
+    "    res += s[i]\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['we', 'want', 'job']\n",
+      "we\n",
+      "['ew']\n",
+      "want\n",
+      "['ew', 'tnaw']\n",
+      "job\n",
+      "['ew', 'tnaw', 'boj']\n",
+      "ew tnaw boj\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'we want job'\n",
+    "l = s.split()\n",
+    "print(l)\n",
+    "res = []\n",
+    "for i in l:\n",
+    "    res.append(i[ : :-1])\n",
+    "    print(i)\n",
+    "    print(res)\n",
+    "print(' '.join(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOHTYP"
+     ]
+    }
+   ],
+   "source": [
+    "k = 'PYTHON'\n",
+    "for x in range(len(k)-1,-1,-1):\n",
+    "    print(k[x],end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M = 2\n",
+      "A = 4\n",
+      "L = 2\n",
+      "Y = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "S = 'MALAYALAM'\n",
+    "pc = []\n",
+    "for i in S:\n",
+    "    if (i not in pc):\n",
+    "        print('{} = {}'.format(i,S.count(i)))\n",
+    "    pc += i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'engineering'\n",
+    "for i in s:\n",
+    "    if s.count(i)== 1:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "  * * * * \n",
+      "    * * * \n",
+      "      * * \n",
+      "        * \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "for i in range(5,0,-1):\n",
+    "        print('{}{}'.format('  '*(n-i),'* '*(i)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_ _ _ _ 1 \n",
+      "_ _ _ 2 1 2 \n",
+      "_ _ 3 2 1 2 3 \n",
+      "_ 4 3 2 1 2 3 4 \n",
+      "5 4 3 2 1 2 3 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "a = 4\n",
+    "for i in range(1,n+1):\n",
+    "    print('_ '*a,end='')\n",
+    "    for j in  range(i,0,-1):\n",
+    "        print(j,end  = ' ')\n",
+    "    for k in  range(1+1,i+1):\n",
+    "        print(k,end  = ' ')\n",
+    "    print()\n",
+    "    a -= 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum : 42\n",
+      "Minimum : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [12,42,5,26]\n",
+    "print(f'Maximum : {max(L)}')\n",
+    "print(f'Minimum : {min(L)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = [12,13,12,12,3,12,13,2,3]\n",
+    "p = 0\n",
+    "for i in L:\n",
+    "    if (L.count(i) > p):\n",
+    "        p = L.count(i)\n",
+    "print(p)\n",
+    "K = []\n",
+    "for i in L:\n",
+    "    if (L.count(i) == p) and (i not in L):\n",
+    "        print(i)\n",
+    "        L.append(i)\n",
+    "print(K)"
    ]
   }
  ],
